--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   shared_preferences:
   after_init: ^0.1.2
   flutter_staggered_grid_view: ^0.3.0
+  blue_thermal_printer:
+  path_provider: ^1.6.0
 
 dev_dependencies:
   flutter_test:
